--- a/react_my_todo/package.json
+++ b/react_my_todo/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "classnames": "^2.2.6",
     "css-modules": "^0.3.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-materialize": "^3.9.7",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
