--- a/top-up/package.json
+++ b/top-up/package.json
@@ -10,17 +10,23 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
-    "next": "11.0.0",
+    "@svgr/webpack": "^3.1.0",
+    "@types/react-router": "^5.1.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "save": "^2.4.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
+    "next": "^11.0.1-canary.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
