--- a/top-up/package.json
+++ b/top-up/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@svgr/webpack": "^3.1.0",
     "@types/react-router": "^5.1.15",
+    "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
