--- a/redux/job_listings_with_filtering/package.json
+++ b/redux/job_listings_with_filtering/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "job_listings_with_filtering",
+  "name": "dashboard-app",
   "version": "0.1.0",
+  "author": "Mikhail Nepomniashchii",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
