--- a/ui-kit/package.json
+++ b/ui-kit/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run dev\" \"json-server -p 3012 --watch db.json\"",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -11,7 +12,10 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.5",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
