--- a/ui-kit/.eslintrc
+++ b/ui-kit/.eslintrc
@@ -23,8 +23,9 @@
   "rules": {
     "react/function-component-definition": "off",
     "react/react-in-jsx-scope": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
   }
 }
