--- a/employees/client/package.json
+++ b/employees/client/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.4.7",
     "axios": "^1.3.5",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "localforage": "^1.10.0",
@@ -19,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "sort-by": "^0.0.2",
     "ts-node": "^10.9.1"
