--- a/employees/client/package.json
+++ b/employees/client/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.4.7",
+    "antd": "5.1.5",
     "axios": "^1.3.5",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "localforage": "^1.10.0",
